<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/mainMenuBackground"
    android:paddingTop="14dp"
    android:paddingEnd="15dp"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry"
    android:paddingBottom="28dp"
    android:paddingStart="17dp">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/design_default_color_background"
        android:textSize="22sp"/>

</FrameLayout>


    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/design_default_color_background"
        app:cornerRadius="@dimen/cornerButton"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/almostBlack"
        android:textSize="@dimen/textSizeMenu"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconTint="@color/almostBlack"
        app:iconPadding="10dp"/>




    <Button
        android:id="@+id/media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/design_default_color_background"
        app:cornerRadius="@dimen/cornerButton"
        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/almostBlack"
        android:textSize="@dimen/textSizeMenu"
        app:icon="@drawable/ic_music"
        app:iconGravity="textStart"
        app:iconTint="@color/almostBlack"
        app:iconPadding="10dp"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/design_default_color_background"
        app:cornerRadius="@dimen/cornerButton"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/almostBlack"
        android:textSize="@dimen/textSizeMenu"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconTint="@color/almostBlack"
        app:iconPadding="10dp"/>



</LinearLayout>